<resources>
    <string name="app_name">Genshin Resin Widget</string>
    <string name="genshin_resin_widget">Genshin Resin Widget</string>
    <string name="uid">Uid</string>
    <string name="cookie">Cookie</string>
    <string name="get_cookie">Get cookie</string>
    <string name="get_uid">Get uid</string>
    <string name="server">Server</string>
    <string name="refresh_cycle">Refresh Cycle</string>
    <string name="notification">Notification</string>
    <string name="auto_check_in">Auto Check In</string>
    <string name="time_notation">Time Notation</string>
    <string name="widget_design">Widget Design</string>
    <string name="widget_theme">Widget Theme</string>
    <string name="background_transparency">Background Transparency</string>
    <string name="font_size">Font Size</string>
    <string name="resin_image">Resin Image</string>
    <string name="visible_data">Visible Data</string>
    <string name="apply">Apply</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="force_stop">FORCE STOP</string>
    <string name="ok">OK</string>
    <string name="reset">RESET</string>
    <string name="asia">Asia</string>
    <string name="america">America</string>
    <string name="europe">Europe</string>
    <string name="cht">TK, HT, MO</string>
    <string name="btn_each_40_resin">Each 40 Resins</string>
    <string name="btn_140_resin">140 Resins</string>
    <string name="resin">Resin</string>
    <string name="btn_expedition_done">Expedition Done</string>
    <string name="btn_home_coin_full">Realm Currency Full</string>
    <string name="btn_remain_time">Remaining time</string>
    <string name="btn_full_charge_time">When fully charge</string>
    <string name="btn_disable">Disable</string>
    <string name="btn_dark">Dark</string>
    <string name="btn_light">Light</string>
    <string name="btn_automatic">Automatic</string>
    <string name="btn_visible">Visible</string>
    <string name="btn_invisible">Invisible</string>
    <string name="btn_auto_check_in_enable">Automatically check-in to HoYoLAB</string>
    <string name="btn_check_in_success">Succeed</string>
    <string name="btn_check_in_failed">Failed</string>
    <string name="done">Done</string>
    <string name="date_st">st</string>
    <string name="date_nd">nd</string>
    <string name="date_rd">rd</string>
    <string name="date_th">th</string>
    <string name="permission_accept">Permission Accept</string>
    <string name="data_save_mode_disable">Data Save Mode Disable</string>
    <string name="native_hoyolab_account">HoYoLAB Account</string>
    <string name="sns_account">SNS Account</string>
    <string name="data_save_mode_not_supported">Data saving mode is not supported under Android 7.</string>
    <string name="dialog_get_storage_permission">Allowing permission</string>
    <string name="dialog_msg_get_storage_permission">When designing a widget, storage permission is required to proceed with the design by substituting it into the wallpaper you actually use.\n\nYou can use the app even if you reject the permission.</string>
    <string name="dialog_widget_refresh_not_work">Refresh doesn\'t work on the Widget</string>
    <string name="dialog_msg_widget_refresh_not_work">If device using <b>power saving mode or data saving mode.</b>, widget doesn\'t refresh.\n\You can disable data saving mode in setting, or detour to allow access to the genshin resin widget on the next screen.\n\nThis permission allows the app to access the notifications the device receives, but the genshin resin widget does not use the notification reception service other than for HoYoLAB data reception purposes, and <b>never</b> accesses the user\'s personal information.\n\nGenshin resin widget recommends data saving mode deactivation.</string>
    <string name="dialog_native_hoyolab_account">Check Your Account</string>
    <string name="dialog_msg_native_hoyolab_account">When using the HoYoLab account, Press <b>HoYoLab Account</b> button.\nWhen using the Google, Apple, FaceBook, Twitter account, Press <b>SNS Account</b> button.</string>
    <string name="dialog_restart">Restart Application</string>
    <string name="dialog_msg_restart">Restart the app to apply the changes.</string>
    <string name="dialog_msg_dailynote_not_public_error_repeat">If Battle Chronicle error occur repeatedly, Please check if you have entered the correct "uid".</string>
    <string name="dialog_realtime_note_private">Realtime Notes is Private</string>
    <string name="dialog_msg_realtime_note_private">Your Real-Time Note is private and data cannot be imported. Do you want to change it to public?</string>
    <string name="msg_toast_back_button">If you press it one more time, you can shut down the app!</string>
    <string name="msg_toast_save_done">Saved It Successfully!</string>
    <string name="msg_toast_api_error_include_code">Failed to communicate with HoYoLAB.. The error code is %s! If you share it with the developer, it helps to solve it!</string>
    <string name="msg_toast_dailynote_success">Successfully get Real-Time Note!</string>
    <string name="msg_toast_dailynote_error_charactor_info">Can\'t read character information. Please check again uid, cookies, and server!</string>
    <string name="msg_toast_dailynote_error_internal_database_error">Error occurred in HoYoLAB\'s database, so can\'t get Real-Time Note !</string>
    <string name="msg_toast_dailynote_error_too_many_requests">Tried too much today.. Try it again later!</string>
    <string name="msg_toast_dailynote_error_not_logged_in">Can\'t get data because it\'s a wrong cookie. Check the cookie again!</string>
    <string name="msg_toast_dailynote_error_not_logged_in_3">It\'s the right cookie, but can\'t get a Real-Time Note because no HoYoLAB account linked to this cookie!</string>
    <string name="msg_toast_dailynote_error_wrong_account">Can\'t get data from other user\'s uid! Please check if the HoYoLAB account with cookies is linked to the this uid\'s Genshin account!</string>
    <string name="msg_toast_dailynote_error_data_not_public">Can\'t receive data because Battle Chronicle is private. In HoYoLAB Settings, Please make public your Battle Chronicle!</string>
    <string name="msg_toast_dailynote_error_account_not_found">Can\'t get Real-Time Note because no Genshin account linked with this HoYoLAB account!</string>
    <string name="msg_toast_dailynote_error_invalid_language">HoYoLAB\'s language is not correct. Check the server or language!</string>
    <string name="msg_toast_dailynote_error_invalid_input">Typed incorrect uid or cookie! uid should be made up only numbers!</string>
    <string name="msg_toast_dailynote_error_include_error_code">I failed to get a Real-Time Note. It\'s an unexpected error, so I can\'t give you detailed information, Error code is %s! Please share it with the developer!</string>
    <string name="msg_toast_dailynote_error">Failed to get a Real-Time Note. It\'s an unexpected error, so I can\'t give you detailed information. sorry!</string>
    <string name="msg_toast_change_data_switch_success">Successfully changed the Real-Time Note to public! Press the save button!</string>
    <string name="msg_toast_change_data_switch_error_include_error_code">Failed to change the Real-Time Note to public.. It\'s an unexpected error, so I can\'t give you detailed information, Error code is %s! Please share it with the developer!</string>
    <string name="msg_toast_get_uid_success">Successfully get in-game uid!</string>
    <string name="msg_toast_get_uid_error_invalid_cookie">The cookie is invalid, so failed to get in-game uid.</string>
    <string name="msg_toast_get_uid_error_card_list_empty">Got data successfully, but can\'t get in-game uid because in-game user data doesn\'t exist!</string>
    <string name="msg_toast_get_uid_error_include_error_code">Failed to get in-game uid.. It\'s an unexpected error, so I can\'t give you detailed information, Error code is %s! Please share it with the developer!</string>
    <string name="msg_toast_check_in_success">Account linked and Checked in Successfully!</string>
    <string name="msg_toast_check_in_already">Account linked Successfully! Today already checked in!</string>
    <string name="msg_toast_check_in_error_not_logged_in">Can\'t get data because wrong cookie. Check the cookie again!</string>
    <string name="msg_toast_check_in_error_too_fast">Tried it too fast! Please try it again later!</string>
    <string name="msg_toast_uid_empty_error">You can\'t link without uid! Please type in "uid"!</string>
    <string name="msg_toast_cookie_empty_error">You can\'t link without cookie! Please enter "cookie"!</string>
    <string name="msg_toast_data_save_mode">It can be modified in the "Mobile data" and "Data saver" menu, and the name of the menu may vary from device to device.</string>
    <string name="msg_toast_how_to_get_cookie">Press the upper left slime to log in, and press Get Cookie at the top!</string>
    <string name="msg_toast_get_cookie_success">Successfully acquired cookie! Typed it automatically!</string>
    <string name="msg_toast_get_cookie_fail">Failed to get cookie.. Please log in and try again!</string>
    <string name="msg_toast_get_cookie_null_fail">Can\'t get cookie because it doesn\'t exist!</string>
    <string name="msg_toast_get_cookie_unknown_fail">Failed to get cookie for an unknown reason..</string>
    <string name="msg_toast_resizable_widget_enable">If you can\'t see the current resins, press the refresh button at the top right of widget.</string>
    <string name="msg_toast_storage_permission_denied">App is not allowed to get wallpaper image because storage access permission are not allowed.</string>
    <string name="push_default_noti_title">Notification</string>
    <string name="push_default_noti_description">Description</string>
    <string name="push_resin_noti_title">Pure Resin Notification</string>
    <string name="push_resin_noti_description">This is a notification sent to inform travelers of each pure resin!</string>
    <string name="push_msg_resin_noti_over_40">Traveler! Your resin is over %d!</string>
    <string name="push_msg_resin_noti_over_120">Traveler! Your resin is over %d!</string>
    <string name="push_msg_resin_noti_over_160">Traveler! Your resin is over %d!</string>
    <string name="push_msg_resin_noti_over_200">Traveler! Your resin is over %d!</string>
    <string name="push_msg_resin_noti_over_140">Traveler! Your resin is over %d!</string>
    <string name="push_msg_resin_noti_custom">Traveler! Your resin is over %d!</string>
    <string name="push_checkin_title">Auto Check-in Notification</string>
    <string name="push_checkin_description">This is a notification sent to inform travelers of their daily check-in at HoYoLAB!</string>
    <string name="push_msg_checkin_success">HoYoLAB check-in successful!</string>
    <string name="push_msg_checkin_already">Already finished today\'s daily check in!</string>
    <string name="push_msg_checkin_failed">Failed HoYoLAB check-in. I\'ll try again in 30 minutes!</string>
    <string name="push_expedition_title">Expedition Done Notification</string>
    <string name="push_expedition_description">This is a notification sent to travelers when the expedition is complete!</string>
    <string name="push_msg_expedition_done">Traveler! All the expedition is complete!</string>
    <string name="push_realm_currency_title">Realm Currency Notification</string>
    <string name="hint_uid">Enter uid!</string>
    <string name="hint_cookie">Enter HoYoLAB\'s cookie!</string>
    <string name="daily_commissions">Daily Commissions</string>
    <string name="enemies_of_note">Enemies Of Note</string>
    <string name="number_of_expedition">Number Of Expedition</string>
    <string name="realm_currency">Realm Currency</string>
</resources>