<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="vm"
            type="danggai.app.resinwidget.ui.design.WidgetDesignViewModel"
            />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/ll_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <include
            android:id="@+id/widget"
            layout="@layout/widget_resin_fixed"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"

            android:layout_margin="50dp"
            />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white"
            android:paddingHorizontal="20dp"
            >

            <Space
                android:layout_width="wrap_content"
                android:layout_height="15dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/time_notation"
                android:textColor="@color/black"
                android:textSize="28sp"
                android:textStyle="bold|italic" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <RadioButton
                    android:id="@+id/rb_remain_time"
                    style="@style/RadioButton"
                    android:layout_marginEnd="10dp"
                    android:onClick="@{(v) -> vm.onClickSetTimeNotation(v)}"
                    android:text="@string/btn_remain_time" />

                <RadioButton
                    android:id="@+id/rb_full_charge_time"
                    style="@style/RadioButton"
                    android:layout_marginEnd="10dp"
                    android:onClick="@{(v) -> vm.onClickSetTimeNotation(v)}"
                    android:text="@string/btn_full_charge_time" />

            </RadioGroup>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="15dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/resin_image"
                android:textColor="@color/black"
                android:textSize="28sp"
                android:textStyle="bold|italic"
                />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                >

                <RadioButton
                    android:id="@+id/rb_resin_image_visible"
                    style="@style/RadioButton"
                    android:layout_marginEnd="10dp"
                    android:onClick="@{(v) -> vm.onClickResinImageVisible(v)}"
                    android:text="@string/btn_visible" />

                <RadioButton
                    android:id="@+id/rb_resin_image_invisible"
                    style="@style/RadioButton"
                    android:layout_marginEnd="10dp"
                    android:onClick="@{(v) -> vm.onClickResinImageVisible(v)}"
                    android:text="@string/btn_invisible" />

            </RadioGroup>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</layout>