<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="vm"
            type="danggai.app.resinwidget.ui.main.MainViewModel"
            />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintVertical_weight="1"
            tools:context=".ui.main.MainFragment"
            android:background="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            >

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/main"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingHorizontal="20dp"
                android:orientation="vertical">

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="15dp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/uid"
                    android:textSize="28sp"
                    android:textStyle="bold|italic"
                    android:textColor="@color/black"
                    android:singleLine="true"
                    />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_uid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/gray"
                    android:text="@={vm.lvUid}"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:hint="@string/hint_uid"
                    android:textColorHint="@color/gray"
                    android:singleLine="true"
                    />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="15dp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cookie"
                    android:textSize="28sp"
                    android:textStyle="bold|italic"
                    android:textColor="@color/black"
                    />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_cookie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/gray"
                    android:text="@={vm.lvCookie}"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:singleLine="true"
                    android:hint="@string/hint_cookie"
                    android:textColorHint="@color/gray"
                    />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="15dp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/refresh_cycle"
                    android:textSize="28sp"
                    android:textStyle="bold|italic"
                    android:textColor="@color/black"
                    />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    >

                    <RadioButton
                        android:id="@+id/rb_disable"
                        style="@style/radioButton"
                        android:text="Disable"
                        android:layout_marginEnd="10dp"
                        android:onClick="@{(v) -> vm.onClickSetAutoRefreshPeriod(v)}"
                        />

                    <RadioButton
                        android:id="@+id/rb_15m"
                        style="@style/radioButton"
                        android:text="15m"
                        android:layout_marginEnd="10dp"
                        android:onClick="@{(v) -> vm.onClickSetAutoRefreshPeriod(v)}"
                        />

                    <RadioButton
                        android:id="@+id/rb_30m"
                        style="@style/radioButton"
                        android:text="30m"
                        android:layout_marginEnd="10dp"
                        android:onClick="@{(v) -> vm.onClickSetAutoRefreshPeriod(v)}"
                        />

                    <RadioButton
                        android:id="@+id/rb_1h"
                        style="@style/radioButton"
                        android:text="1h"
                        android:layout_marginEnd="10dp"
                        android:onClick="@{(v) -> vm.onClickSetAutoRefreshPeriod(v)}"
                        />

                    <RadioButton
                        android:id="@+id/rb_2h"
                        style="@style/radioButton"
                        android:text="2h"
                        android:layout_marginEnd="10dp"
                        android:onClick="@{(v) -> vm.onClickSetAutoRefreshPeriod(v)}"
                        />

                </RadioGroup>

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="15dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Apply"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:onClick="@{(v)->vm.onClickSave()}"
                    android:background="@drawable/rounded_square_skyblue_5dp"
                    android:foreground="?attr/selectableItemBackground"
                    android:paddingVertical="10dp"
                    android:paddingHorizontal="20dp"
                    android:layout_gravity="center_horizontal" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.core.widget.NestedScrollView>



    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>